// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PortfolioValue /> Should render and match the snapshot 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "#766ef9",
      "borderRadius": 6,
      "elevation": 6,
      "height": 170,
      "shadowColor": "#766ef9",
      "shadowOffset": Object {
        "height": 3,
      },
      "shadowOpacity": 0.7,
      "shadowRadius": 6,
      "width": 720,
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 170,
          "width": 720,
        },
        Object {
          "borderRadius": 6,
        },
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginBottom": 6,
        "marginRight": 22,
        "marginTop": 15,
      }
    }
  >
    <Text />
    <Text
      style={
        Object {
          "color": "#fff",
          "fontSize": 22,
          "fontWeight": "bold",
          "marginLeft": 5,
        }
      }
    >
      Value
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontSize": 40,
        "fontWeight": "bold",
        "marginLeft": 22,
      }
    }
  >
    123
  </Text>
  <Text
    style={
      Object {
        "color": "#fff",
        "fontSize": 18,
        "marginBottom": 15,
        "marginHorizontal": 22,
        "marginTop": 20,
      }
    }
  >
    Total Investment
  </Text>
</View>
`;

exports[`<PortfolioValue /> Should render and match the snapshot when error 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "#766ef9",
      "borderRadius": 6,
      "elevation": 6,
      "height": 170,
      "shadowColor": "#766ef9",
      "shadowOffset": Object {
        "height": 3,
      },
      "shadowOpacity": 0.7,
      "shadowRadius": 6,
      "width": 720,
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 170,
          "width": 720,
        },
        Object {
          "borderRadius": 6,
        },
      ]
    }
  />
  <Text>
    sample_error
  </Text>
</View>
`;

exports[`<PortfolioValue /> Should render and match the snapshot when loading 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "#766ef9",
      "borderRadius": 6,
      "elevation": 6,
      "height": 170,
      "shadowColor": "#766ef9",
      "shadowOffset": Object {
        "height": 3,
      },
      "shadowOpacity": 0.7,
      "shadowRadius": 6,
      "width": 720,
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 170,
          "width": 720,
        },
        Object {
          "borderRadius": 6,
        },
      ]
    }
  />
  <ActivityIndicator
    animating={true}
    color="#fff"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "marginTop": 70,
      }
    }
  />
</View>
`;
